--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation "io.jsonwebtoken:jjwt:${jwtVersion}"
 	implementation "com.google.code.gson:gson:${gsonVersion}"
 	implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
