--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation "io.jsonwebtoken:jjwt:${jwtVersion}"
 	implementation "com.google.code.gson:gson:${gsonVersion}"
 	implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
